--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container"></div>
+    <button>Choose grid size</button>
+    <div class="page">
+        <div class="container"></div>
+    </div>
 </body>
 <script src="javascript.js"></script>
 </html>
